--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -238,34 +238,34 @@
                             <children>
                                 <AnchorPane HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="111.0" styleClass="database-label" text="Item Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="138.0" styleClass="database-label" text="Item Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane layoutX="452.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="52.0" styleClass="database-label" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="73.0" styleClass="database-label" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane layoutX="530.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="113.0" styleClass="database-label" text="Order Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="130.0" styleClass="database-label" text="Order Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane layoutX="501.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="80.0" styleClass="database-label" text="Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="93.0" styleClass="database-label" text="Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane layoutX="386.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="102.0" styleClass="database-label" text="Stock Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="112.0" styleClass="database-label" text="Stock Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
-                                <AnchorPane layoutX="108.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                                <AnchorPane layoutX="108.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
                                     <children>
                                         <Pane prefHeight="50.0" prefWidth="64.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children></AnchorPane>
-                                <AnchorPane layoutX="488.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                                <AnchorPane layoutX="488.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
                                     <children>
                                         <Pane prefHeight="50.0" prefWidth="62.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children></AnchorPane>
