--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
@@ -241,33 +241,33 @@
                      <children>
                         <AnchorPane prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" contentDisplay="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" styleClass="database-label" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" contentDisplay="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="111.0" styleClass="database-label" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                         <AnchorPane layoutX="10.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" styleClass="database-label" text="Username" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="111.0" styleClass="database-label" text="Username" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                         <AnchorPane layoutX="210.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" text="Usersince" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="112.0" styleClass="database-label" text="Usersince" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                         <AnchorPane layoutX="410.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" text="Email" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="112.0" styleClass="database-label" text="Email" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children></AnchorPane>
                         <AnchorPane layoutX="488.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" text="Role" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="112.0" styleClass="database-label" text="Role" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children></AnchorPane>
-                        <AnchorPane layoutX="520.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                        <AnchorPane layoutX="520.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Pane minWidth="50.0" prefHeight="50.4" prefWidth="50.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="542.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                        <AnchorPane layoutX="542.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Pane prefHeight="50.4" prefWidth="50.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
