--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/adminhome.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/adminhome.css
@@ -84,3 +84,34 @@
     -fx-background-radius: 15px;
     -fx-background-color: #F5F5F5;
 }
+
+/*  widget styling */
+
+.widget-container {
+    -fx-background-color: white;
+    -fx-border-color: #F5F5F5;
+    -fx-background-radius: 10;
+}
+.widget-line{
+    -fx-border-color: #F5F5F5;
+    -fx-border-width: 0.5;
+    -fx-max-height: 0;
+}
+
+.list-pane {
+    -fx-background-color: white;
+    -fx-border-color: transparent;
+    -fx-background-radius: 10;
+    -fx-border-radius: 10px;
+
+}
+.list-cell:filled:selected:focused,
+.list-cell:filled:selected,
+.list-cell:even,
+.list-cell:odd {
+    -fx-background-color: transparent;
+}
+.list-pane .scroll-bar:horizontal {
+    -fx-opacity: 0;      /* Makes the scrollbar invisible */
+
+}
