--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage2.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage2.fxml
@@ -284,7 +284,7 @@
                             <children>
                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../images/search_icon.png" />
+                                        <Image url="@../../images/waitericons/search_icon.png" />
                                     </image>
                                     <HBox.margin>
                                         <Insets left="15.0" top="7.0" />
