--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -3,20 +3,21 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../Home/adminhome.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenHomeController">
+<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenHomeController">
    <top>
       <HBox prefHeight="65.0" prefWidth="1280.0" styleClass="top-container" BorderPane.alignment="CENTER">
          <children>
@@ -83,7 +84,7 @@
                      </image>
                   </ImageView>
                   <Text fx:id="greeting" layoutX="36.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-label" text="Hello, Admin" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="95.41300010681152" />
-                  <Text fill="#757575" layoutX="81.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0"  text="Welcome," AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="130.0" />
+                  <Text fill="#757575" layoutX="81.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome," AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="130.0" />
                   <Text fill="#757575" layoutX="66.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Have a nice day" AnchorPane.topAnchor="145.0" />
                </children>
             </AnchorPane>
@@ -168,49 +169,37 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <TilePane hgap="10.0" prefHeight="654.4" prefTileHeight="300.0" prefTileWidth="335.0" prefWidth="1069.6" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-                     <children>
-                        <Label text="Noteboard" />
-                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-                     <children>
-                        <Label text="Stock Alerts" />
-                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="TOP_CENTER" layoutX="366.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-                     <children>
-                        <Label text="Menu Top Sellers" />
-                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="TOP_CENTER" layoutX="712.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-                     <children>
-                        <Label text="User Report" />
-                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="331.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-                     <children>
-                        <Label text="Daily Sales" />
-                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="TOP_CENTER" layoutX="366.0" layoutY="331.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
-                     <children>
-                        <Label text="Meow IDK" />
-                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
-                     </children>
-                  </VBox>
-               </children>
+            <FlowPane hgap="10.0" prefHeight="876.0" prefWidth="1070.0" prefWrapLength="0.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </TilePane>
+               <children>
+                  <VBox minHeight="200.0" minWidth="600.0">
+                     <children>
+                        <Label text="WIDGET NAME" />
+                        <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
+                           <children>
+                              <HBox prefHeight="50.0" />
+                              <HBox prefHeight="100.0" prefWidth="200.0" styleClass="widget-line" />
+                              <ListView prefHeight="200.0" prefWidth="200.0" styleClass="list-pane" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <VBox layoutX="20.0" layoutY="20.0" minHeight="200.0" minWidth="420.0">
+                     <children>
+                        <Label text="WIDGET NAME" />
+                        <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
+                           <children>
+                              <HBox prefHeight="50.0" />
+                              <HBox prefHeight="100.0" prefWidth="200.0" styleClass="widget-line" />
+                              <ListView prefHeight="200.0" prefWidth="200.0" styleClass="list-pane" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+               </children>
+            </FlowPane>
          </children>
       </AnchorPane>
    </center>
