--- a/src/main/resources/teampixl/com/pixlpos/fxml/style.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/style.css
@@ -1,22 +1,24 @@
 /* Constants */
 
+.root {
+    --base-color: #F5F5F5;
 
+}
 
-
+/*var(--base-color)*/
 
 
 /* ADMIN */
 /* ============================ HOME ============================ */
 /* Root styling */
-.root {
-    -fx-background-color: #F5F5F5;
-}
-
 /* SideBar styling */
 .side-container {
     -fx-background-color: white;
 }
-
+.logo-text {
+    -fx-text-fill: #757575;
+    -fx-font-size: 12;
+}
 .line {
     -fx-background-color: #4A85F6;
     -fx-stroke-width: 0.2;
@@ -28,15 +30,15 @@
     -fx-font-family: "Arial", sans-serif;
 }
 
-.hello-label {
-    -fx-text-fill: black;
+.hello-label-admin {
+    -fx-text-fill: #0A0A0A;
     -fx-font-size: 18px;
-    -fx-font-weight: bold;
+    -fx-font-weight: 700;
     -fx-font-family: "Arial", sans-serif;
 }
 
 
-.header-label, .logo {
+.header-label-admin {
     -fx-text-fill: #4A85F6;
     -fx-font-size: 23px;
     -fx-font-weight: bold;
@@ -62,20 +64,20 @@
 }
 
 
-.logout-button {
+.logout-button-admin {
     -fx-background-color: white;
     -fx-text-fill: #4a4a4a;
     -fx-font-size: 17px;
     -fx-cursor: hand;
 }
 
-.logout-button:hover {
+.logout-button-admin:hover {
     -fx-background-color: #4A85F6;
     -fx-text-fill: white;
 }
 
 /* TopBar styling */
-.top-container {
+.top-container-white {
     -fx-background-color: white;
 }
 
@@ -89,7 +91,7 @@
     -fx-background-color: rgba(0, 0, 0, 0);
 }
 
-.search-bar {
+.search-bar-admin {
     -fx-background-radius: 15px;
     -fx-background-color: #F5F5F5;
 }
@@ -243,7 +245,7 @@
 }
 
 /* TopBar styling */
-.top-container {
+.top-container-clear {
     -fx-background-color: white;
 }
 
@@ -302,9 +304,7 @@
 }
 /*============================ USERS ============================ */
 /* Root styling */
-.root {
-    -fx-background-color: #F5F5F5;
-}
+
 
 /* SideBar styling */
 .side-container {
@@ -481,9 +481,7 @@
 }
 /*============================ STOCK ============================ */
 /* Root styling */
-.root {
-    -fx-background-color: #F5F5F5;
-}
+
 
 /* SideBar styling */
 .side-container {
@@ -644,9 +642,7 @@
 }
 /*============================ ANALYTICS ============================ */
 /* Root styling */
-.root {
-    -fx-background-color: #F5F5F5;
-}
+
 
 /* SideBar styling */
 .side-container {
