--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -178,34 +180,118 @@
                <children>
                   <VBox minHeight="300.0" minWidth="600.0">
                      <children>
-                        <Label text="WIDGET NAME" />
+                        <Label text="Notes" />
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox prefHeight="50.0" />
+                              <HBox prefHeight="50.0">
+                                 <children>
+                                    <AnchorPane prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <Label layoutX="31.0" layoutY="15.0" styleClass="database-label" text="Date" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <Label layoutX="31.0" layoutY="15.0" styleClass="database-label" text="User" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" HBox.hgrow="ALWAYS">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="15.0" styleClass="database-label" text="Note" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="410.0" layoutY="10.0" prefHeight="200.0" prefWidth="60.0" />
+                                 </children></HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0" styleClass="widget-line" />
+                              <ListView prefHeight="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
                   </VBox>
                   <VBox minHeight="300.0" minWidth="420.0">
                      <children>
-                        <Label text="WIDGET NAME" />
+                        <Label text="Stock" />
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox prefHeight="50.0" />
+                              <HBox prefHeight="50.0">
+                                 <children>
+                                    <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                       <children>
+                                          <Label layoutX="36.0" layoutY="15.0" styleClass="database-label" text="Stock" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="50.0" prefWidth="101.0">
+                                       <children>
+                                          <Label layoutX="32.0" layoutY="15.0" styleClass="database-label" text="Level" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="200.0" prefWidth="115.0">
+                                       <children>
+                                          <Label layoutX="36.0" layoutY="15.0" styleClass="database-label" text="Status" />
+                                       </children>
+                                    </AnchorPane>
+                                 </children></HBox>
                               <HBox prefHeight="0.0" styleClass="widget-line" />
+                              <ListView prefHeight="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox layoutX="610.0" layoutY="10.0" minHeight="300.0" minWidth="420.0">
+                  <VBox layoutX="610.0" layoutY="10.0" minHeight="300.0" minWidth="450.0">
                      <children>
-                        <Label text="WIDGET NAME" />
+                        <Label text="User Log" />
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox prefHeight="50.0" />
+                              <HBox prefHeight="50.0">
+                                 <children>
+                                    <AnchorPane prefHeight="50.0" prefWidth="100.0">
+                                       <children>
+                                          <Label layoutX="33.0" layoutY="15.0" styleClass="database-label" text="Date" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="50.0" prefWidth="120.0">
+                                       <children>
+                                          <Label layoutX="44.0" layoutY="15.0" styleClass="database-label" text="User" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="50.0" prefWidth="130.0">
+                                       <children>
+                                          <Label layoutX="29.0" layoutY="15.0" styleClass="database-label" text="Logged-In" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="50.0" prefWidth="98.0">
+                                       <children>
+                                          <Label layoutX="28.0" layoutY="15.0" styleClass="database-label" text="Active" />
+                                       </children>
+                                    </AnchorPane>
+                                 </children></HBox>
                               <HBox prefHeight="0.0" styleClass="widget-line" />
+                              <ListView prefHeight="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
                            </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <VBox layoutX="20.0" layoutY="340.0" minHeight="300.0" minWidth="200.0">
+                     <children>
+                        <Label text="TOP 5 Sellers" />
+                        <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
+                           <children>
+                              <ListView prefHeight="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <VBox layoutX="450.0" layoutY="340.0" minHeight="300.0" minWidth="300.0">
+                     <children>
+                        <Label text="Sales" />
+                        <VBox alignment="CENTER" prefHeight="200.0" spacing="20.0" styleClass="widget-container" VBox.vgrow="ALWAYS">
+                           <children>
+                              <PieChart prefHeight="222.0" prefWidth="300.0" />
+                              <Label alignment="CENTER" text="Total Sales: 00" />
+                           </children>
+                           <padding>
+                              <Insets bottom="20.0" />
+                           </padding>
                         </VBox>
                      </children>
                   </VBox>
